# golangci-lint

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
cmd/golangci-lint/: BUILD.bazel
internal/cache/: BUILD.bazel
internal/errorutil/: BUILD.bazel
internal/pkgcache/: BUILD.bazel
internal/renameio/: BUILD.bazel
internal/robustio/: BUILD.bazel
pkg/commands/: BUILD.bazel
pkg/config/: BUILD.bazel
pkg/exitcodes/: BUILD.bazel
pkg/fsutils/: BUILD.bazel
pkg/golinters/: BUILD.bazel
pkg/golinters/goanalysis/: BUILD.bazel
pkg/golinters/goanalysis/load/: BUILD.bazel
pkg/golinters/nolintlint/: BUILD.bazel
pkg/goutil/: BUILD.bazel
pkg/lint/: BUILD.bazel
pkg/lint/linter/: BUILD.bazel
pkg/lint/lintersdb/: BUILD.bazel
pkg/logutils/: BUILD.bazel
pkg/printers/: BUILD.bazel
pkg/report/: BUILD.bazel
pkg/result/: BUILD.bazel
pkg/result/processors/: BUILD.bazel
pkg/timeutils/: BUILD.bazel
release/: BUILD.bazel  multiarch_binary.bzl  version.sh
release/toolchain/: BUILD.bazel
scripts/expand_website_templates/: BUILD.bazel
scripts/print_ast/: BUILD.bazel
test/: BUILD.bazel
test/bench/: BUILD.bazel
test/ruleguard/: BUILD.bazel
test/testshared/: BUILD.bazel  directives.go  runner.go
