module(
    name = "golangci_lint",
    version = "1.54.2",
)

bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", version = "0.33.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.21.3",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "cc_mvdan_interfacer",
    "cc_mvdan_unparam",
    "co_honnef_go_tools",
    "com_4d63_gocheckcompilerdirectives",
    "com_4d63_gochecknoglobals",
    "com_github_4meepo_tagalign",
    "com_github_abirdcfly_dupword",
    "com_github_alexkohler_nakedret_v2",
    "com_github_alexkohler_prealloc",
    "com_github_alingse_asasalint",
    "com_github_antonboom_errname",
    "com_github_antonboom_nilnil",
    "com_github_ashanbrown_forbidigo",
    "com_github_ashanbrown_makezero",
    "com_github_bkielbasa_cyclop",
    "com_github_blizzy78_varnamelen",
    "com_github_bombsimon_wsl_v3",
    "com_github_breml_bidichk",
    "com_github_breml_errchkjson",
    "com_github_burntsushi_toml",
    "com_github_butuzov_ireturn",
    "com_github_butuzov_mirror",
    "com_github_charithe_durationcheck",
    "com_github_curioswitch_go_reassign",
    "com_github_daixiang0_gci",
    "com_github_denis_tingaikin_go_header",
    "com_github_djarvur_go_err113",
    "com_github_esimonov_ifshort",
    "com_github_fatih_color",
    "com_github_firefart_nonamedreturns",
    "com_github_fzipp_gocyclo",
    "com_github_gaijinentertainment_go_exhaustruct_v3",
    "com_github_go_critic_go_critic",
    "com_github_go_xmlfmt_xmlfmt",
    "com_github_gofrs_flock",
    "com_github_golangci_check",
    "com_github_golangci_dupl",
    "com_github_golangci_go_misc",
    "com_github_golangci_gofmt",
    "com_github_golangci_lint_1",
    "com_github_golangci_maligned",
    "com_github_golangci_misspell",
    "com_github_golangci_revgrep",
    "com_github_golangci_unconvert",
    "com_github_gordonklaus_ineffassign",
    "com_github_gostaticanalysis_forcetypeassert",
    "com_github_gostaticanalysis_nilerr",
    "com_github_hashicorp_go_multierror",
    "com_github_hashicorp_go_version",
    "com_github_hexops_gotextdiff",
    "com_github_jgautheron_goconst",
    "com_github_jingyugao_rowserrcheck",
    "com_github_jirfag_go_printf_func_name",
    "com_github_julz_importas",
    "com_github_kisielk_errcheck",
    "com_github_kkhaike_contextcheck",
    "com_github_kulti_thelper",
    "com_github_kunwardeep_paralleltest",
    "com_github_kyoh86_exportloopref",
    "com_github_ldez_gomoddirectives",
    "com_github_ldez_tagliatelle",
    "com_github_leonklingele_grouper",
    "com_github_lufeee_execinquery",
    "com_github_maratori_testableexamples",
    "com_github_maratori_testpackage",
    "com_github_matoous_godox",
    "com_github_mattn_go_colorable",
    "com_github_mbilski_exhaustivestruct",
    "com_github_mgechev_revive",
    "com_github_mitchellh_go_homedir",
    "com_github_mitchellh_go_ps",
    "com_github_mitchellh_mapstructure",
    "com_github_moricho_tparallel",
    "com_github_nakabonne_nestif",
    "com_github_nishanths_exhaustive",
    "com_github_nishanths_predeclared",
    "com_github_nunnatsa_ginkgolinter",
    "com_github_openpeedeep_depguard_v2",
    "com_github_polyfloyd_go_errorlint",
    "com_github_quasilyte_go_ruleguard_dsl",
    "com_github_ryancurrah_gomodguard",
    "com_github_ryanrolds_sqlclosecheck",
    "com_github_sanposhiho_wastedassign_v2",
    "com_github_sashamelentyev_interfacebloat",
    "com_github_sashamelentyev_usestdlibvars",
    "com_github_securego_gosec_v2",
    "com_github_shazow_go_diff",
    "com_github_shirou_gopsutil_v3",
    "com_github_sirupsen_logrus",
    "com_github_sivchari_containedctx",
    "com_github_sivchari_nosnakecase",
    "com_github_sivchari_tenv",
    "com_github_sonatard_noctx",
    "com_github_sourcegraph_go_diff",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_ssgreg_nlreturn_v2",
    "com_github_stbenjam_no_sprintf_host_port",
    "com_github_stretchr_testify",
    "com_github_tdakkota_asciicheck",
    "com_github_tetafro_godot",
    "com_github_timakin_bodyclose",
    "com_github_timonwong_loggercheck",
    "com_github_tomarrell_wrapcheck_v2",
    "com_github_tommy_muehle_go_mnd_v2",
    "com_github_ultraware_funlen",
    "com_github_ultraware_whitespace",
    "com_github_uudashr_gocognit",
    "com_github_valyala_quicktemplate",
    "com_github_xen0n_gosmopolitan",
    "com_github_yagipy_maintidx",
    "com_github_yeya24_promlinter",
    "com_github_ykadowak_zerologlint",
    "com_gitlab_bosi_decorder",
    "dev_tmz_go_musttag",
    "in_gopkg_yaml_v3",
    "org_golang_x_exp",
    "org_golang_x_tools",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "2.1.2")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    "//release/toolchain:cc-toolchain-linux-x86_64-glibc-2.31",
    "//release/toolchain:cc-toolchain-macos-x86_64",
    "//release/toolchain:cc-toolchain-macos-aarch64",
)
