load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "golangci-lint_lib",
    srcs = ["main.go"],
    importpath = "github.com/golangci/golangci-lint/cmd/golangci-lint",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/commands",
        "//pkg/exitcodes",
    ],
)

go_binary(
    name = "golangci-lint",
    embed = [":golangci-lint_lib"],
    gc_goopts = [
        "-trimpath",
    ],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{SHORT_COMMIT}",
        "main.date": "{BUILD_DATE}",
        "main.goVersion": "{GO_VERSION}",
    },
)
