load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "robustio",
    srcs = [
        "robustio.go",
        "robustio_darwin.go",
        "robustio_flaky.go",
        "robustio_other.go",
        "robustio_windows.go",
    ],
    importpath = "github.com/golangci/golangci-lint/internal/robustio",
    visibility = ["//:__subpackages__"],
)
