load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "cache.go",
        "config.go",
        "executor.go",
        "help.go",
        "linters.go",
        "root.go",
        "run.go",
        "version.go",
    ],
    importpath = "github.com/golangci/golangci-lint/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cache",
        "//internal/pkgcache",
        "//pkg/config",
        "//pkg/exitcodes",
        "//pkg/fsutils",
        "//pkg/golinters/goanalysis/load",
        "//pkg/goutil",
        "//pkg/lint",
        "//pkg/lint/linter",
        "//pkg/lint/lintersdb",
        "//pkg/logutils",
        "//pkg/packages",
        "//pkg/printers",
        "//pkg/report",
        "//pkg/result",
        "//pkg/timeutils",
        "@com_github_fatih_color//:color",
        "@com_github_gofrs_flock//:flock",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
