load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "golinters",
    srcs = [
        "asasalint.go",
        "asciicheck.go",
        "bidichk.go",
        "bodyclose.go",
        "commons.go",
        "containedctx.go",
        "contextcheck.go",
        "cyclop.go",
        "deadcode.go",
        "decorder.go",
        "depguard.go",
        "dogsled.go",
        "dupl.go",
        "dupword.go",
        "durationcheck.go",
        "errcheck.go",
        "errchkjson.go",
        "errname.go",
        "errorlint.go",
        "execinquery.go",
        "exhaustive.go",
        "exhaustivestruct.go",
        "exhaustruct.go",
        "exportloopref.go",
        "forbidigo.go",
        "forcetypeassert.go",
        "funlen.go",
        "gci.go",
        "ginkgolinter.go",
        "gocheckcompilerdirectives.go",
        "gochecknoglobals.go",
        "gochecknoinits.go",
        "gocognit.go",
        "goconst.go",
        "gocritic.go",
        "gocyclo.go",
        "godot.go",
        "godox.go",
        "goerr113.go",
        "gofmt.go",
        "gofmt_common.go",
        "gofumpt.go",
        "goheader.go",
        "goimports.go",
        "golint.go",
        "gomnd.go",
        "gomoddirectives.go",
        "gomodguard.go",
        "goprintffuncname.go",
        "gosec.go",
        "gosimple.go",
        "gosmopolitan.go",
        "govet.go",
        "grouper.go",
        "ifshort.go",
        "importas.go",
        "ineffassign.go",
        "interfacebloat.go",
        "interfacer.go",
        "ireturn.go",
        "lll.go",
        "loggercheck.go",
        "maintidx.go",
        "makezero.go",
        "maligned.go",
        "mirror.go",
        "misspell.go",
        "musttag.go",
        "nakedret.go",
        "nestif.go",
        "nilerr.go",
        "nilnil.go",
        "nlreturn.go",
        "noctx.go",
        "nolintlint.go",
        "nonamedreturns.go",
        "nosnakecase.go",
        "nosprintfhostport.go",
        "paralleltest.go",
        "prealloc.go",
        "predeclared.go",
        "promlinter.go",
        "reassign.go",
        "revive.go",
        "rowserrcheck.go",
        "scopelint.go",
        "sqlclosecheck.go",
        "staticcheck.go",
        "staticcheck_common.go",
        "structcheck.go",
        "stylecheck.go",
        "tagalign.go",
        "tagliatelle.go",
        "tenv.go",
        "testableexamples.go",
        "testpackage.go",
        "thelper.go",
        "tparallel.go",
        "typecheck.go",
        "unconvert.go",
        "unparam.go",
        "unused.go",
        "usestdlibvars.go",
        "util.go",
        "varcheck.go",
        "varnamelen.go",
        "wastedassign.go",
        "whitespace.go",
        "wrapcheck.go",
        "wsl.go",
        "zerologlint.go",
    ],
    importpath = "github.com/golangci/golangci-lint/pkg/golinters",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/fsutils",
        "//pkg/golinters/goanalysis",
        "//pkg/golinters/nolintlint",
        "//pkg/lint/linter",
        "//pkg/logutils",
        "//pkg/result",
        "@cc_mvdan_gofumpt//format",
        "@cc_mvdan_interfacer//check",
        "@cc_mvdan_unparam//check",
        "@co_honnef_go_tools//analysis/lint",
        "@co_honnef_go_tools//config",
        "@co_honnef_go_tools//simple",
        "@co_honnef_go_tools//staticcheck",
        "@co_honnef_go_tools//stylecheck",
        "@co_honnef_go_tools//unused",
        "@com_4d63_gocheckcompilerdirectives//checkcompilerdirectives",
        "@com_4d63_gochecknoglobals//checknoglobals",
        "@com_github_4meepo_tagalign//:tagalign",
        "@com_github_abirdcfly_dupword//:dupword",
        "@com_github_alexkohler_nakedret_v2//:nakedret",
        "@com_github_alexkohler_prealloc//pkg",
        "@com_github_alingse_asasalint//:asasalint",
        "@com_github_antonboom_errname//pkg/analyzer",
        "@com_github_antonboom_nilnil//pkg/analyzer",
        "@com_github_ashanbrown_forbidigo//forbidigo",
        "@com_github_ashanbrown_makezero//makezero",
        "@com_github_bkielbasa_cyclop//pkg/analyzer",
        "@com_github_blizzy78_varnamelen//:varnamelen",
        "@com_github_bombsimon_wsl_v3//:wsl",
        "@com_github_breml_bidichk//pkg/bidichk",
        "@com_github_breml_errchkjson//:errchkjson",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_butuzov_ireturn//analyzer",
        "@com_github_butuzov_mirror//:mirror",
        "@com_github_charithe_durationcheck//:durationcheck",
        "@com_github_curioswitch_go_reassign//:go-reassign",
        "@com_github_daixiang0_gci//pkg/config",
        "@com_github_daixiang0_gci//pkg/gci",
        "@com_github_daixiang0_gci//pkg/io",
        "@com_github_daixiang0_gci//pkg/log",
        "@com_github_denis_tingaikin_go_header//:go-header",
        "@com_github_djarvur_go_err113//:go-err113",
        "@com_github_esimonov_ifshort//pkg/analyzer",
        "@com_github_firefart_nonamedreturns//analyzer",
        "@com_github_fzipp_gocyclo//:gocyclo",
        "@com_github_gaijinentertainment_go_exhaustruct_v3//analyzer",
        "@com_github_go_critic_go_critic//checkers",
        "@com_github_go_critic_go_critic//linter",
        "@com_github_golangci_check//cmd/structcheck",
        "@com_github_golangci_check//cmd/varcheck",
        "@com_github_golangci_dupl//:dupl",
        "@com_github_golangci_go_misc//deadcode",
        "@com_github_golangci_gofmt//gofmt",
        "@com_github_golangci_gofmt//goimports",
        "@com_github_golangci_lint_1//:lint-1",
        "@com_github_golangci_maligned//:maligned",
        "@com_github_golangci_misspell//:misspell",
        "@com_github_golangci_unconvert//:unconvert",
        "@com_github_gordonklaus_ineffassign//pkg/ineffassign",
        "@com_github_gostaticanalysis_forcetypeassert//:forcetypeassert",
        "@com_github_gostaticanalysis_nilerr//:nilerr",
        "@com_github_hexops_gotextdiff//:gotextdiff",
        "@com_github_hexops_gotextdiff//myers",
        "@com_github_hexops_gotextdiff//span",
        "@com_github_jgautheron_goconst//:goconst",
        "@com_github_jingyugao_rowserrcheck//passes/rowserr",
        "@com_github_jirfag_go_printf_func_name//pkg/analyzer",
        "@com_github_julz_importas//:importas",
        "@com_github_kisielk_errcheck//errcheck",
        "@com_github_kkhaike_contextcheck//:contextcheck",
        "@com_github_kulti_thelper//pkg/analyzer",
        "@com_github_kunwardeep_paralleltest//pkg/paralleltest",
        "@com_github_kyoh86_exportloopref//:exportloopref",
        "@com_github_ldez_gomoddirectives//:gomoddirectives",
        "@com_github_ldez_tagliatelle//:tagliatelle",
        "@com_github_leonklingele_grouper//pkg/analyzer",
        "@com_github_lufeee_execinquery//:execinquery",
        "@com_github_maratori_testableexamples//pkg/testableexamples",
        "@com_github_maratori_testpackage//pkg/testpackage",
        "@com_github_matoous_godox//:godox",
        "@com_github_mbilski_exhaustivestruct//pkg/analyzer",
        "@com_github_mgechev_revive//config",
        "@com_github_mgechev_revive//lint",
        "@com_github_mgechev_revive//rule",
        "@com_github_moricho_tparallel//:tparallel",
        "@com_github_nakabonne_nestif//:nestif",
        "@com_github_nishanths_exhaustive//:exhaustive",
        "@com_github_nishanths_predeclared//passes/predeclared",
        "@com_github_nunnatsa_ginkgolinter//:ginkgolinter",
        "@com_github_openpeedeep_depguard_v2//:depguard",
        "@com_github_polyfloyd_go_errorlint//errorlint",
        "@com_github_ryancurrah_gomodguard//:gomodguard",
        "@com_github_ryanrolds_sqlclosecheck//pkg/analyzer",
        "@com_github_sanposhiho_wastedassign_v2//:wastedassign",
        "@com_github_sashamelentyev_interfacebloat//pkg/analyzer",
        "@com_github_sashamelentyev_usestdlibvars//pkg/analyzer",
        "@com_github_securego_gosec_v2//:gosec",
        "@com_github_securego_gosec_v2//issue",
        "@com_github_securego_gosec_v2//rules",
        "@com_github_shazow_go_diff//difflib",
        "@com_github_sivchari_containedctx//:containedctx",
        "@com_github_sivchari_nosnakecase//:nosnakecase",
        "@com_github_sivchari_tenv//:tenv",
        "@com_github_sonatard_noctx//:noctx",
        "@com_github_sourcegraph_go_diff//diff",
        "@com_github_ssgreg_nlreturn_v2//pkg/nlreturn",
        "@com_github_stbenjam_no_sprintf_host_port//pkg/analyzer",
        "@com_github_tdakkota_asciicheck//:asciicheck",
        "@com_github_tetafro_godot//:godot",
        "@com_github_timakin_bodyclose//passes/bodyclose",
        "@com_github_timonwong_loggercheck//:loggercheck",
        "@com_github_tomarrell_wrapcheck_v2//wrapcheck",
        "@com_github_tommy_muehle_go_mnd_v2//:go-mnd",
        "@com_github_ultraware_funlen//:funlen",
        "@com_github_ultraware_whitespace//:whitespace",
        "@com_github_uudashr_gocognit//:gocognit",
        "@com_github_xen0n_gosmopolitan//:gosmopolitan",
        "@com_github_yagipy_maintidx//:maintidx",
        "@com_github_yeya24_promlinter//:promlinter",
        "@com_github_ykadowak_zerologlint//:zerologlint",
        "@com_gitlab_bosi_decorder//:decorder",
        "@dev_tmz_go_musttag//:musttag",
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/asmdecl",
        "@org_golang_x_tools//go/analysis/passes/assign",
        "@org_golang_x_tools//go/analysis/passes/atomic",
        "@org_golang_x_tools//go/analysis/passes/atomicalign",
        "@org_golang_x_tools//go/analysis/passes/bools",
        "@org_golang_x_tools//go/analysis/passes/buildssa",
        "@org_golang_x_tools//go/analysis/passes/buildtag",
        "@org_golang_x_tools//go/analysis/passes/cgocall",
        "@org_golang_x_tools//go/analysis/passes/composite",
        "@org_golang_x_tools//go/analysis/passes/copylock",
        "@org_golang_x_tools//go/analysis/passes/ctrlflow",
        "@org_golang_x_tools//go/analysis/passes/deepequalerrors",
        "@org_golang_x_tools//go/analysis/passes/defers",
        "@org_golang_x_tools//go/analysis/passes/directive",
        "@org_golang_x_tools//go/analysis/passes/errorsas",
        "@org_golang_x_tools//go/analysis/passes/fieldalignment",
        "@org_golang_x_tools//go/analysis/passes/findcall",
        "@org_golang_x_tools//go/analysis/passes/framepointer",
        "@org_golang_x_tools//go/analysis/passes/httpresponse",
        "@org_golang_x_tools//go/analysis/passes/ifaceassert",
        "@org_golang_x_tools//go/analysis/passes/inspect",
        "@org_golang_x_tools//go/analysis/passes/loopclosure",
        "@org_golang_x_tools//go/analysis/passes/lostcancel",
        "@org_golang_x_tools//go/analysis/passes/nilfunc",
        "@org_golang_x_tools//go/analysis/passes/nilness",
        "@org_golang_x_tools//go/analysis/passes/pkgfact",
        "@org_golang_x_tools//go/analysis/passes/printf",
        "@org_golang_x_tools//go/analysis/passes/reflectvaluecompare",
        "@org_golang_x_tools//go/analysis/passes/shadow",
        "@org_golang_x_tools//go/analysis/passes/shift",
        "@org_golang_x_tools//go/analysis/passes/sigchanyzer",
        "@org_golang_x_tools//go/analysis/passes/slog",
        "@org_golang_x_tools//go/analysis/passes/sortslice",
        "@org_golang_x_tools//go/analysis/passes/stdmethods",
        "@org_golang_x_tools//go/analysis/passes/stringintconv",
        "@org_golang_x_tools//go/analysis/passes/structtag",
        "@org_golang_x_tools//go/analysis/passes/testinggoroutine",
        "@org_golang_x_tools//go/analysis/passes/tests",
        "@org_golang_x_tools//go/analysis/passes/timeformat",
        "@org_golang_x_tools//go/analysis/passes/unmarshal",
        "@org_golang_x_tools//go/analysis/passes/unreachable",
        "@org_golang_x_tools//go/analysis/passes/unsafeptr",
        "@org_golang_x_tools//go/analysis/passes/unusedresult",
        "@org_golang_x_tools//go/analysis/passes/unusedwrite",
        "@org_golang_x_tools//go/packages",
        "@org_golang_x_tools//imports",
    ],
)

go_test(
    name = "golinters_test",
    srcs = [
        "gocritic_test.go",
        "gofmt_test.go",
        "gosec_test.go",
        "govet_test.go",
    ],
    embed = [":golinters"],
    deps = [
        "//pkg/config",
        "//pkg/logutils",
        "//pkg/result",
        "@com_github_securego_gosec_v2//:gosec",
        "@com_github_sourcegraph_go_diff//diff",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/asmdecl",
        "@org_golang_x_tools//go/analysis/passes/assign",
        "@org_golang_x_tools//go/analysis/passes/atomic",
        "@org_golang_x_tools//go/analysis/passes/bools",
        "@org_golang_x_tools//go/analysis/passes/buildtag",
        "@org_golang_x_tools//go/analysis/passes/cgocall",
        "@org_golang_x_tools//go/analysis/passes/shadow",
    ],
)
