load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "lint",
    srcs = [
        "load.go",
        "runner.go",
    ],
    importpath = "github.com/golangci/golangci-lint/pkg/lint",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/errorutil",
        "//internal/pkgcache",
        "//pkg/config",
        "//pkg/exitcodes",
        "//pkg/fsutils",
        "//pkg/golinters/goanalysis/load",
        "//pkg/goutil",
        "//pkg/lint/linter",
        "//pkg/lint/lintersdb",
        "//pkg/logutils",
        "//pkg/packages",
        "//pkg/result",
        "//pkg/result/processors",
        "//pkg/timeutils",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@org_golang_x_tools//go/packages",
    ],
)
