load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "printers",
    srcs = [
        "checkstyle.go",
        "codeclimate.go",
        "github.go",
        "html.go",
        "json.go",
        "junitxml.go",
        "printer.go",
        "tab.go",
        "teamcity.go",
        "text.go",
    ],
    importpath = "github.com/golangci/golangci-lint/pkg/printers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logutils",
        "//pkg/report",
        "//pkg/result",
        "@com_github_fatih_color//:color",
        "@com_github_go_xmlfmt_xmlfmt//:xmlfmt",
    ],
)

go_test(
    name = "printers_test",
    srcs = [
        "checkstyle_test.go",
        "codeclimate_test.go",
        "github_test.go",
        "html_test.go",
        "json_test.go",
        "junitxml_test.go",
        "tab_test.go",
        "teamcity_test.go",
        "text_test.go",
    ],
    embed = [":printers"],
    deps = [
        "//pkg/logutils",
        "//pkg/result",
        "@com_github_fatih_color//:color",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
