toolchain(
    name = "cc-toolchain-linux-x86_64-glibc-2.31",
    exec_compatible_with = None,
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "//release/platforms:glibc_2.31",
    ],
    toolchain = "@zig_sdk//:x86_64-linux-gnu.2.31_cc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-toolchain-macos-x86_64",
    exec_compatible_with = None,
    target_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@zig_sdk//:x86_64-macos-none_cc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-toolchain-macos-aarch64",
    exec_compatible_with = None,
    target_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    toolchain = "@zig_sdk//:aarch64-macos-none_cc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
